--- a/GraphicsProject/GraphicsProject.cbp
+++ b/GraphicsProject/GraphicsProject.cbp
@@ -7,8 +7,8 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin\Debug\GraphicsProject" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin/Debug/GraphicsProject" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -16,8 +16,8 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin\Release\GraphicsProject" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/GraphicsProject" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -33,14 +33,25 @@
 			<Add directory="include" />
 		</Compiler>
 		<Linker>
-			<Add library="lib\libgraphics.a" />
-			<Add library="lib\libgraphicsd.a" />
-			<Add library="lib\libsdl_ttf.a" />
-			<Add library="lib\libSDL.dll.a" />
-			<Add library="lib\libSDLmain.a" />
+			<Add library="lib/libgraphics.a" />
+			<Add library="lib/libgraphicsd.a" />
+			<Add library="lib/libsdl_ttf.a" />
+			<Add library="lib/libSDL.dll.a" />
+			<Add library="lib/libSDLmain.a" />
 			<Add directory="lib" />
 		</Linker>
+		<Unit filename="include/List.hpp" />
+		<Unit filename="include/Logger.hpp" />
+		<Unit filename="include/MainWindow.hpp" />
+		<Unit filename="include/NumberBox.hpp" />
+		<Unit filename="include/checkbox.hpp" />
+		<Unit filename="include/widgets.hpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/List.cpp" />
+		<Unit filename="src/MainWindow.cpp" />
+		<Unit filename="src/NumberBox.cpp" />
+		<Unit filename="src/checkbox.cpp" />
+		<Unit filename="src/widgets.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
